...
    
    var body: some View {
        HStack(spacing: 12) {
            Image(systemName: "person.circle")
                .font(.title)
                .foregroundColor(inputStatus[keyPath: colorType])
            TextField("Email", text: $username)
                .textContentType(.emailAddress)
                .font(.title3)
                .autocapitalization(.none)
                .disableAutocorrection(true)
                .frame(minHeight: 44)
        }
...
