...
                Spacer()
            }
            .padding(.top, 90)
            
            HStack {
                Button(action: cancelEdit) {
                    Text("Cancel")
                }
                Spacer()
                Button(action: confirmEdit) {
                    Text("Done")
                        .bold()
                }
            }
            .padding(.horizontal)
            .padding(.vertical, 30)
        }
...
